fix docker publish

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,10 +3,10 @@ name: Build and Publish Docker Image
 on:
   push:
     branches:
-      - main  # Trigger the workflow on pushes to the main branch
+      - master  # Trigger the workflow on pushes to the main branch
   pull_request:
     branches:
-      - main  # Also trigger on pull requests to the main branch
+      - master  # Also trigger on pull requests to the main branch
 
 jobs:
   build:
